[build-system]
requires = [ 'setuptools>=77.0.0', 'wheel' ]
build-backend = 'setuptools.build_meta'

[project]
name = 'tremolo-login'
authors = [
    { name = 'Anggit Arfanto', email = 'contact@anggit.com' },
]
description = 'tremolo-login is basically an extension of tremolo-session.'
requires-python = '>=3.6'
dependencies = [
    'tremolo>=0.5.0',
]
license = 'MIT'
license-files = [ 'LICENSE' ]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
]
dynamic = [ 'version', 'readme' ]

[project.urls]
Homepage = 'https://github.com/nggit/tremolo-login'
Source = 'https://github.com/nggit/tremolo-login'
Funding = 'https://github.com/sponsors/nggit'

[tool.setuptools]
packages = [ 'tremolo_login' ]

[tool.setuptools.dynamic]
version = { attr = 'tremolo_login.__version__' }
readme = { file = 'README.md', content-type = 'text/markdown' }
